SERVER-10779 Add support for DBRef $db field in JSON Parser